--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Стартовый шаблон</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>Добро пожаловать в Лигу А.</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Круизы в Антарктику</title>
+    <link rel="stylesheet" href="css/style.min.css" />
+  </head>
+  <body>
+    <header class="page-header">
+      <div class="page-header__container container">
+        <a class="page-header__logo logo">
+          <img
+            class="logo__pic"
+            src="img/logo.svg"
+            width="70"
+            height="38"
+            alt="Логотип компании"
+          />
+        </a>
+        <nav class="navigation">
+          <button class="button"></button>
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Преимущества</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Направления</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Ближайшие круизы</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="promo">
+      <div class="promo__container container">
+        <h1 class="promo__title">Круизы в Антарктику</h1>
+        <div class="promo__text">Волшебный мир айсбергов и пингвинов</div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="about__container container">
+        <div class="about__item">
+          <h2 class="about__title">Путешествие на край Земли</h2>
+          <p class="about__text">
+            Это волшебное путешествие поможет вам познакомиться поближе с
+            удивительным миром Антарктики. Наш круизный лайнер отвезет вас на
+            край Земли, где вы сможете увидеть: ледяные айсберги, несколько
+            видов пингвинов, китов, морских котиков и многое другое.
+          </p>
+        </div>
+        <div class="about__item">
+          <img src="" alt="Пингвины" />
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="img/about/penguins.jpg"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="img/about/penguins-tablet.jpg"
+            />
+            <img
+              class="logo__pic"
+              src="img/about/penguins-mob.jpg"
+              alt="Пингвины"
+            />
+          </picture>
+        </div>
+      </div>
+    </section>
+    <section class="advantage">
+      <div class="advantage__container container">
+        <h2 class="advantage__title"></h2>
+        <ul class="advantage__list">
+          <li class="advantage__item">
+            <svg class="advantage__icon" width="30" height="30"></svg>
+            <h3 class="advantage__name">Небольшой круизный лайнер</h3>
+            <div class="advantage__text">
+              Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет
+              избежать шума и очередей и даст возможность насладиться видами и
+              природой.
+            </div>
+          </li>
+          <li class="advantage__item">
+            <svg class="advantage__icon" width="30" height="30"></svg>
+            <h3 class="advantage__name">Система все включено</h3>
+            <div class="advantage__text">
+              Все наши круизы работают по системе “Все Включено”. Великолепные
+              блюда и безлимитный бар доступны для вас 24 часа.
+            </div>
+          </li>
+          <li class="advantage__item">
+            <svg class="advantage__icon" width="30" height="30"></svg>
+            <h3 class="advantage__name">Экскурсионные туры на Zodiac</h3>
+            <div class="advantage__text">
+              Экскурсионные туры к берегам Антарктиды совершаются на
+              оборудованных лодках типа Zodiac в сопровождении опытных
+              экскурсоводов.
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="nearest-cruises">
+      <div class="nearest-cruises__container container">
+        <h2 class="nearest-cruises__title">Ближайшие круизы</h2>
+        <div class="nearest-cruises__items">
+          <div class="nearest-cruises__item">
+            <div class="cruise">
+              <div class="cruise__inner">
+                <h3>Круиз “Астория”</h3>
+                <div class="cruise__info"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="booking">
+      <div class="booking__container container">
+        <div class="booking__info">
+          <h2>Раннее бронирование</h2>
+          <div class="booking__text">
+            Забронируйте тур за 3-6 месяцев до даты выезда и сэкономьте до 50%
+          </div>
+        </div>
+        <div class="booking__form"></div>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="contacts__container container">
+        <div class="contacts__map"></div>
+        <div class="contacts__info">
+          <div>
+            У вас ещё остались вопросы или сомнения? Приезжайте к нам в офис и
+            мы вам все расскажем.
+          </div>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link" href="#">
+                <svg width="25" height="54">
+                <use xlink:href="img/sprite_auto.svg#icon-point"></use>
+              </svg>
+                <span>г. Санкт Петербург, ул. Большая Конюшенная, 19/8</span>
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="tel:+78002000000">
+                <svg width="25" height="54">
+                <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+              </svg>
+                <span>8-800-200-00-00</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer class="page-footer">
+      <div class="page-footer__container container">
+        <a class="page-footer__logo logo">
+          <img class="logo__pic" src="img/logo.svg" alt="Логотип компании" />
+        </a>
+        <nav class="page-footer__nav navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Преимущества</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Направления</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Ближайшие круизы</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Наш Фейсбук">
+              <svg width="25" height="54">
+                <use xlink:href="img/sprite_auto.svg#icon-insta"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Наш Инстаграм">
+              <svg width="25" height="40">
+                <use xlink:href="img/sprite_auto.svg#icon-fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="#" aria-label="Наш Твитер">
+              <svg width="25" height="54">
+                <use xlink:href="img/sprite_auto.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
