подправилп стили для круизов, формы

--- a/source/index.html
+++ b/source/index.html
@@ -81,7 +81,7 @@
             />
             <img
               class="logo__pic"
-              src="img/about/penguins-mob.jpg"
+              src="img/about/penguins-mob.jpg" width="560" height="301"
               alt="Пингвины"
             />
           </picture>
