--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
     </section>
     <section class="about">
       <div class="about__container container">
-        <div class="about__item">
+        <div class="about__info">
           <div class="about__text">
             <h2>Путешествие на край Земли</h2>
             <p>
@@ -104,7 +104,7 @@
             </p>
           </div>
         </div>
-        <div class="about__item">
+        <div class="about__pic">
           <picture>
             <source
               media="(min-width: 1200px)"
@@ -690,7 +690,7 @@
         <a class="page-footer__logo logo">
           <img class="logo__pic" src="img/logo.svg" alt="Логотип компании" />
         </a>
-        <nav class="page-footer__nav navigation">
+        <nav class="page-footer__nav navigation navigation--footer">
           <ul class="navigation__list">
             <li class="navigation__item">
               <a class="navigation__link" href="#">Преимущества</a>
