--- a/source/index.html
+++ b/source/index.html
@@ -731,8 +731,7 @@
         </ul>
       </div>
     </footer>
-    <script src="
-    js/vendor/svg4everybody.js"></script>
+    <script src="js/vendor.min.js"></script>
     <script src="js/script.js"></script>
     <script>
       svg4everybody();
