правки в блоке промо и контакты (карта)

--- a/source/index.html
+++ b/source/index.html
@@ -85,11 +85,9 @@
         </div>
       </header>
       <section class="promo">
-        <div class="promo__container">
-          <div class="container">
-            <h1>Круизы в Антарктику</h1>
-            <p>Волшебный мир айсбергов и пингвинов</p>
-          </div>
+        <div class="promo__container container">
+          <h1>Круизы в Антарктику</h1>
+          <p>Волшебный мир айсбергов и пингвинов</p>
         </div>
       </section>
     </div>
@@ -242,7 +240,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">
+                <h3>
                   Круиз “Астория”
                 </h3>
                 <div class="cruise__info">
@@ -318,7 +316,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Элайн”</h3>
+                <h3>Круиз “Элайн”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -392,7 +390,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Атлантис”</h3>
+                <h3>Круиз “Атлантис”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -468,7 +466,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Одиссей”</h3>
+                <h3>Круиз “Одиссей”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -543,7 +541,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Олимпия”</h3>
+                <h3>Круиз “Олимпия”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -619,7 +617,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Аврора”</h3>
+                <h3>Круиз “Аврора”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -694,7 +692,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Леонор”</h3>
+                <h3>Круиз “Леонор”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -769,7 +767,7 @@
                 />
               </picture>
               <div class="cruise__inner">
-                <h3 class="cruise__title">Круиз “Минион - 1”</h3>
+                <h3>Круиз “Минион - 1”</h3>
                 <div class="cruise__info">
                   <div class="cruise__item">
                     <div class="cruise__item-title">Маршрут</div>
@@ -882,7 +880,7 @@
     <footer class="page-footer">
       <div class="page-footer__container container">
         <a class="page-footer__logo logo">
-          <img class="logo__pic" src="img/logo.svg" alt="Логотип компании" />
+          <img src="img/logo.svg" alt="Логотип компании" />
         </a>
         <nav class="page-footer__nav navigation navigation--footer">
           <ul class="navigation__list">
