--- a/source/index.html
+++ b/source/index.html
@@ -814,23 +814,23 @@
             </div>
             <label for="name"
               ><span class="visually-hidden">Валерия</span>
-              <input id="name" type="text" placeholder="Валерия" />
+              <input id="name" type="text" placeholder="Валерия" required />
             </label>
             <label for="phone">
               <span class="visually-hidden">Ваш телефон</span>
-              <input id="phone" type="text" placeholder="89236889975"
+              <input id="phone" type="text" placeholder="89236889975" required
             /></label>
             <label for="email">
               <span class="visually-hidden">grishaewa.lera@gmail.com</span>
               <input
                 id="email"
                 type="email"
-                placeholder="grishaewa.lera@gmail.com"
+                placeholder="grishaewa.lera@gmail.com" required
               />
             </label>
 
             <label for="check">
-              <input id="check" type="checkbox" name="check" /><span
+              <input id="check" type="checkbox" name="check" required /><span
                 >Я согласен на обработку моих персональных данных</span
               ></label
             >
@@ -849,7 +849,6 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1587391959289!5m2!1sru!2sru"
             width="600"
             height="450"
-            frameborder="0"
             style="border: 0;"
             allowfullscreen=""
             aria-hidden="false"
