исправление багов в блоках преимущества и круизы

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Круизы в Антарктику</title>
-    <meta name="description" content="Путешествие поможет вам познакомиться поближе с удивительным миром Антарктики." />
-     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <meta
+      name="description"
+      content="Путешествие поможет вам познакомиться поближе с удивительным миром Антарктики."
+    />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body class="page">
@@ -138,6 +141,7 @@
                 img/about/penguins-tablet@2x.jpg 2x
               "
             />
+            <!-- 1х: 290px; 2x: 580px -->
             <img
               src="img/about/penguins-mob.jpg"
               srcset="img/about/penguins-mob@2x.jpg 2x"
@@ -232,6 +236,7 @@
                     img/cruises/cruise-1-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-1-mob.jpg"
                   srcset="img/cruises/cruise-1-mob@2x.jpg 2x"
@@ -308,6 +313,7 @@
                     img/cruises/cruise-1-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-1-mob.jpg"
                   srcset="img/cruises/cruise-1-mob@2x.jpg 2x"
@@ -382,6 +388,7 @@
                     img/cruises/cruise-3-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-3-mob.jpg"
                   srcset="img/cruises/cruise-3-mob@2x.jpg 2x"
@@ -458,6 +465,7 @@
                     img/cruises/cruise-4-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-4-mob.jpg"
                   srcset="img/cruises/cruise-4-mob@2x.jpg 2x"
@@ -533,6 +541,7 @@
                     img/cruises/cruise-5-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-5-mob.jpg"
                   srcset="img/cruises/cruise-5-mob@2x.jpg 2x"
@@ -609,6 +618,7 @@
                     img/cruises/cruise-6-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-6-mob.jpg"
                   srcset="img/cruises/cruise-6-mob@2x.jpg 2x"
@@ -684,6 +694,7 @@
                     img/cruises/cruise-7-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-7-mob.jpg"
                   srcset="img/cruises/cruise-7-mob@2x.jpg 2x"
@@ -759,6 +770,7 @@
                     img/cruises/cruise-8-table@2x.jpg 2x
                   "
                 />
+                <!-- 1х: 270px; 2x: 540px -->
                 <img
                   src="img/cruises/cruise-8-mob.jpg"
                   srcset="img/cruises/cruise-8-mob@2x.jpg 2x"
