--- a/source/index.html
+++ b/source/index.html
@@ -721,7 +721,7 @@
                 id="phone"
                 type="text"
                 placeholder="89236889975"
-                pattern="^\+7(\s+)?\(?([0-9]{3})\)?(\s+)?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$"
+                onkeyup="javascript:mask('phone', '+7(000)000-00-00', event);" value="+7(___)___-____"
                 required
             /></label>
             <label for="email" aria-label="grishaewa.lera@gmail.com">
