--- a/source/index.html
+++ b/source/index.html
@@ -721,7 +721,10 @@
                 id="phone"
                 type="text"
                 placeholder="89236889975"
-                onkeyup="javascript:mask('phone', '+7(000)000-00-00', event);" value="+7(___)___-____"
+                onkeyup="javascript:mask('phone', '+7(000)000-00-00', event);"
+                value=""
+                minlength="16"
+                maxlength="16"
                 required
             /></label>
             <label for="email" aria-label="grishaewa.lera@gmail.com">
